Bug 756367 - Reset animation of image requests when they become the current request instead of when they finish loading. r=bz